# python-project-template

./: LICENSE  pyproject.toml
.github/workflows/: python-test.yml
python-project-template/: __main__.py
