[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Caravela Hacker Clube python template project"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pylint-quotes = "^0.2.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip_string_normalization = true

[tool.isort]
profile = "hug"
line_length = 100

[tool.pylint]
    [tool.pylint.MASTER]
    ignore = "CVS"
    persistent = "yes"
    load-plugins = "pylint_quotes"
    string-quote = "single"
    triple-quote = "double"
    docstring-quote = "double"